src/main/resources/ch1/ex3.log
scala> 0
res0: Int = 0

scala> res0 = 1
<console>:12: error: reassignment to val
       res0 = 1
            ^

